Fix z-index for the tom select dropdown element when open.

--- a/css/tom-select-rtl-315-beta-8.css
+++ b/css/tom-select-rtl-315-beta-8.css
@@ -198,7 +198,7 @@ div.woocommerce form .form-row.woocommerce-validated:not([class*=woocommerce-inv
 }
 
 .ts-dropdown {
-  z-index: 10;
+  z-index: 200;
   overflow: hidden;
   position: absolute;
   top: 100%;
